upstream sync